<resources>
    <string name="app_name">MasterCine</string>
    <string name="val_nombrepelicula">NombrePelicula</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="val_contra">Contraseña</string>
    <string name="val_correo">Correo electronico</string>
    <string name="val_login">Inciar sesión</string>
    <string name="val_regis">Crear cuenta nueva</string>
    <string name="val_nombre">Nombres</string>
    <string name="val_dni">Doc. Identidad</string>
    <string name="val_fecha">Fech. Nacimiento</string>
    <string name="val_telef">Numero de celular</string>
    <string name="val_email">Correo electronico</string>
    <string name="val_cancel">Cancelar</string>
    <string name="val_regi">Crear cuenta</string>
    <string name="descripcion">MasterCine es una comunidad dedicada a los aficionados del séptimo arte. Fundada en 2015, nuestra misión es conectar a las personas con el cine de manera profunda y significativa.</string>
    <string name="cine_logo_desc">Desde nuestros humildes comienzos como un pequeño club de cine hasta convertirnos en una de las comunidades cinéfilas más grandes, MasterCine ha sido un espacio para descubrir, discutir y compartir el amor por las películas.</string>
    <string name="estrenos_desc">Este mes, la magia del cine se renueva con una selección de estrenos que prometen llevarnos desde las risas más genuinas hasta el borde de nuestros asientos con aventuras épicas, historias conmovedoras y thrillers que desafían la mente. Descubre historias que inspiran, entretienen y despiertan la imaginación en nuestra cuidadosa selección de estrenos. Desde las profundidades del espacio hasta las complejidades del corazón humano, cada película es una ventana a nuevos mundos. Prepárate para experimentar la emoción de lo desconocido y la alegría del cine como nunca antes.</string>
    <string name="sedes">Descubre nuestras sedes de cine en todo Perú, donde la magia del cine cobra vida. Con ubicaciones convenientes y comodidades de primera clase, cada visita es una experiencia inolvidable. Sumérgete en la emoción del séptimo arte en nuestras sedes hoy mismo</string>
    <string name="val_edt">Guardar cambios</string>
</resources>